added on click to GET on user by id

--- a/app/index.html
+++ b/app/index.html
@@ -11,7 +11,8 @@
     <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
   <![endif]-->
   <div class="main-container">
-    <h1>EverQuiz1</h1>
+    <h1>EverQuiz</h1>
+    <h2>List of users</h2>
     <div id="users"></div>
   </div>
   <script src="js/app.js"></script>
