--- a/app/index.html
+++ b/app/index.html
@@ -14,6 +14,11 @@
     <h1>EverQuiz</h1>
     <h2>List of users</h2>
     <div id="users"></div>
+    <form id="newUser">
+      <input type="text" name="name">
+      <input type="email" name="email">
+      <button type="submit">add user</button>
+    </form>
   </div>
   <script src="js/app.js"></script>
 </body>
