Added spa-app.js skeleton

--- a/app/index.html
+++ b/app/index.html
@@ -20,6 +20,12 @@
       <button type="submit">add user</button>
     </form>
   </div>
+    
+  <section id="intro" class="" src="pages/intro.htm"></section>
+  <section id="quiz-menu" class="" src="pages/quiz-menu.htm"></section>
+  <section id="about" class="" src="pages/about.htm"></section>
+    
+  <script src="js/spa-app.js"></script>
   <script src="js/app.js"></script>
 </body>
 </html>
