added delete request

--- a/app/index.html
+++ b/app/index.html
@@ -19,6 +19,11 @@
       <input type="email" name="email">
       <button type="submit">add user</button>
     </form>
+    <form id="editUser">
+      <input type="text" name="name">
+      <input type="email" name="email">
+      <button type="submit">edit user</button>
+    </form>
   </div>
     
   <section id="intro" class="" src="pages/intro.htm"></section>
