--- a/app/index.html
+++ b/app/index.html
@@ -14,14 +14,17 @@
     <h1>EverQuiz</h1>
     <h2>List of users</h2>
     <div id="users"></div>
+    <h2>New user</h2>
     <form id="newUser">
       <input type="text" name="name">
       <input type="email" name="email">
       <button type="submit">add user</button>
     </form>
+    <h2>Edit user</h2>
     <form id="editUser">
       <input type="text" name="name">
       <input type="email" name="email">
+      <input type="hidden" name="id">
       <button type="submit">edit user</button>
     </form>
   </div>
